--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
 <resources>
 
     <string name="app_name">BicyleTourManagerAndroid</string>
-    <string name="title_activity_main">MainActivity</string>
+
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_main">Main</string>
+    <string name="title_activity_list_downloaded">Downloaded List</string>
+    <string name="title_activity_show_downloaded">Show Downloaded</string>
+    <string name="title_activity_list_online">Online List</string>
+    <string name="title_activity_show_online">Show Online</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
