--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="title_activity_list_online">Online List</string>
     <string name="title_activity_show_online">Show Online</string>
 
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
