--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,12 @@
     <string name="title_activity_show_downloaded">Show Downloaded</string>
     <string name="title_activity_list_online">Online List</string>
     <string name="title_activity_show_online">Show Online</string>
+    <string name="title_activity_go">Go</string>
 
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_go">Go</string>
 
 </resources>
