--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="action_settings">Settings</string>
     <string name="action_go">Go</string>
 
+    <string name="download">Downloading...</string>
+    <string name="download_failure">Download Failed</string>
+    <string name="download_success">Download Success</string>
+
 </resources>
